# libriscv

./: .gitignore  .gitmodules  ABI.md  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  Mayhemfile  README.md  SECURITY.md  callgraph.sh  fuzz.cpp  fuzzer.sh  setup.sh  unittests.yml
binaries/: build.sh  (+5 more)
binaries/STREAM/: .gitignore  CMakeLists.txt  build.sh
binaries/STREAM/src/: stream.c
binaries/barebones/: .gitignore  CMakeLists.txt  README.md  build.sh  build32.sh  build32_clang.sh  build64.sh  build64_clang.sh  micro_toolchain.cmake  symbols.map  toolchain.cmake
binaries/barebones/libc/: CMakeLists.txt  assert.cpp  heap.cpp  heap.hpp  libc.c  libc.cpp  libcxx.cpp  malloc.c  microthread.cpp  microthread.hpp  print.cpp  start.cpp  syscall.hpp  write.cpp
binaries/barebones/src/: hello_world.cpp
binaries/newlib/: CMakeLists.txt  build.sh
binaries/newlib/src/: hello_world.cpp
emu128/: CMakeLists.txt  build.sh
emu128/src/: main.cpp
emulator/: CMakeLists.txt  README.md  bolt.sh  build.sh  debug.sh  debug_linux_program.sh  mingw_build.sh  perf.sh
emulator/doom/: .gitignore  CMakeLists.txt  build.sh  doom-rv32g
emulator/doom/src/: main.cpp
emulator/emu128/: CMakeLists.txt  build.sh  linker.ld  program.asm
emulator/emu128/src/: main.cpp  program.h
emulator/includeos/: CMakeLists.txt  README.md  service.cpp  vm.json
emulator/minimal/: CMakeLists.txt
emulator/minimal/src/: main.cpp
emulator/nodiverge/: CMakeLists.txt  build.sh  nodiverge.cpp  workarounds.cpp
emulator/src/: linux.cpp  main.cpp  native_heap.hpp  native_libc.cpp  native_threads.cpp  settings.hpp  syscalls.cpp  syscalls.hpp  threads.cpp  threads.hpp
emulator/syscalls/: CMakeLists.txt
emulator/syscalls/include/: native_heap.hpp  syscall_helpers.hpp  threads.hpp
emulator/syscalls/src/: native_libc.cpp  native_threads.cpp  posix_threads.cpp  syscalls.cpp  threads.cpp
emulator/syscalls/test/: CMakeLists.txt  heaptest.cpp
examples/coremark/: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  main.cpp
examples/expert/guest/: CMakeLists.txt  env.cpp  program.cpp  toolchain.cmake
examples/gamedev/: CMakeLists.txt  README.md  build_and_run.sh  example.cpp  script.cpp  script.hpp  test
examples/gamedev/cpp_program/: program.cpp
examples/gamedev/nelua_program/: api.c  api.nelua  build.sh  example.nelua  program.nelua
examples/gamedev/nim_program/: api.c  build.sh  program.nim
examples/gamedev/script_program/: CMakeLists.txt  api.hpp  build.sh  dyncall.hpp  program.cpp
examples/gamedev/src/: example.cpp  script.cpp
examples/wasm/: CMakeLists.txt  README.md  build.sh  main.cpp
examples/wasm/bintr/: fib.c
examples/wasm/program/: build.sh  main.cpp  program.elf
fuzz/: CMakeLists.txt  Mayhemfile  fuzz.cpp  fuzzer.sh
fuzz/lib/: CMakeLists.txt
fuzz/lib/libriscv/: decoder_cache.cpp  decoder_rewriter.cpp  elf.hpp  instr_helpers.hpp  machine.hpp  memory.cpp  memory.hpp  memory_helpers_paging.hpp  memory_inline.hpp  memory_rw.cpp  multiprocessing.cpp  native_threads.cpp  posix_signals.cpp  posix_threads.cpp  registers.hpp  riscvbase.hpp  rsp_server.hpp  rv32i.hpp  rv64i.cpp  rv64i.hpp  rvf_instr.cpp  rvi_fuse.cpp  rvi_instr.cpp  serialize.cpp  signals.hpp  threads.hpp  tr_compiler.cpp  types.hpp
lib/: CMakeLists.txt  config.h.in  cpu.cpp  cpu.hpp  cpu_inline.hpp  libriscv_libtcc.pc.in  libriscv_libtcc_distro.pc.in  libriscv_settings.h.in  machine.hpp  machine_inline.hpp  memory.hpp  page.hpp  riscvbase.hpp  rv32i.cpp  rv32i.hpp  rv32i_instr.cpp  tccdefs_.h  types.hpp
lib/libriscv/: bytecode_dispatch.cpp  bytecode_impl.cpp  common.hpp  cpu.cpp  cpu.hpp  cpu_dispatch.cpp  cpu_fastsim.cpp  cpu_inaccurate_dispatch.cpp  cpu_inline.hpp  cpu_multiprocess.cpp  debug.cpp  debug.hpp  decode_bytecodes.cpp  decoded_exec_segment.hpp  decoder_cache.cpp  decoder_cache.hpp  decoder_rewriter.cpp  elf.hpp  extern_instructions.hpp  fastsim.hpp  guest_datatypes.hpp  instr_decoding.inc  instr_helpers.hpp  instruction_counter.hpp  instruction_list.hpp  internal_common.hpp  linux_syscalls.cpp  machine.cpp  machine.hpp  machine_defaults.cpp  machine_inline.hpp  machine_vmcall.hpp  memory.cpp  memory.hpp  memory_elf.cpp  memory_helpers.hpp  memory_helpers_flat.hpp  memory_helpers_paging.hpp  memory_inline.hpp  memory_inline_pages.hpp  (+66 more)
lib/libriscv/amd64/: asm_dispatch.cpp  inaccurate_dispatch.nasm
lib/libriscv/linux/: rsp_server.hpp  syscalls_epoll.cpp  syscalls_mman.cpp  syscalls_poll.cpp  system_calls.cpp
lib/libriscv/posix/: filedesc.hpp  minimal.cpp  signals.cpp  signals.hpp  socket_calls.cpp  threads.cpp
lib/libriscv/supervisor/: supervisor.cpp  supervisor.hpp
lib/libriscv/util/: buffer.hpp  crc32.hpp  crc32c.cpp  delegate.hpp  elf128.h  function.hpp  load_binary_file.hpp  string.hpp  threadpool.h
lib/libriscv/win32/: dlfcn.cpp  dlfcn.h  minimal.cpp  rsp_server.hpp  system_calls.cpp  tr_msvc.cpp  ws2.hpp
tests/: CMakeLists.txt  custom.cpp  main.cpp  test_crashes.cpp  test_rv32c.cpp  test_rv32i.cpp  testable_instruction.hpp
tests/autotest/: run.py
tests/autotest/emulator/: CMakeLists.txt  include
tests/buildconfig/: CMakeLists.txt  test.sh
tests/elf/: CMakeLists.txt  main.cpp  run.sh
tests/instructions/: CMakeLists.txt  test_crashes.cpp  test_rv32c.cpp  test_rv32i.cpp  testable_instruction.hpp
tests/unit/: CMakeLists.txt  basic.cpp  basic32.cpp  brutal.cpp  checksum.cpp  codebuilder.cpp  crc32.hpp  custom.cpp  dynamic.cpp  examples.cpp  fp_testsuite.cpp  heaptest.cpp  hostfunc.cpp  memory_trap.cpp  micro.cpp  mp_testsuite.cpp  mp_testsuite.hpp  native.cpp  png.cpp  protections.cpp  run_binary_translated_unit_tests.sh  run_experimentally.sh  run_unit_tests.sh  rvbuffer.cpp  security.cpp  serialize.cpp  va_execute.cpp  verify_elf.cpp  vmcall.cpp  zig_unit_tests.sh
tests/unit/elf/: newlib-rv64g_zba_zbb-hello-world
tests/unit/include/: native_libc.h
tests/unit/scripts/: find_compiler.sh
webapi/: CMakeLists.txt  README.md  compile.cpp  execute.cpp  index.html  sanitize.py  server.cpp  syscalls.cpp
webapi/tests/: test.sh  test.txt
webapi/varnish/: cache.vcl
(+163 files in other folders)
